fixed spacing issue on search page

--- a/apparelrow/static/less/base.less
+++ b/apparelrow/static/less/base.less
@@ -450,6 +450,9 @@ h3 {
 
 #search-result {
     display: none;
+    .btn {
+        margin-bottom: 20px;
+    }
 }
 
 .search-page {
